--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
     <!-- BOWER FOR SHARING -->
     <link rel='stylesheet' href="/scripts/libs/bower/angular-socialshare.min.css">
     <!-- favicon.ico -->
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <!--<link rel="icon" href="data:;base64,iVBORw0KGgo=">-->
 </head>
 
 <body ng-app="app" ng-controller="AppCtrl" >       
@@ -91,7 +91,7 @@
     <script src="/scripts/libs/angular/oclazyload/dist/ocLazyLoad.js"></script>
           
     <!-- Angular Material Library -->
-    <script src="/scripts/libs/angular/angular-material/angular-material.min.js"></script>
+    <script src="/bower_components/angular-material/angular-material.min.js"></script>
 
     <!-- App -->
     <script src="/scripts/languages/lang-en.js"></script>
@@ -132,5 +132,7 @@
     <script src="http://platform.twitter.com/widgets.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <browser-refresh enabled="true"/>
+    <!--<script src="{process.env.BROWSER_REFRESH_URL}"></script>-->
 </body>
 </html>
