Implementing for loading tour-details, places, images and cruises

--- a/public/views/tour/detail.html
+++ b/public/views/tour/detail.html
@@ -171,10 +171,10 @@
                                         <div style="float:right">
                                             <button type="button" class="btn btn-default" 
                                                 ng-click="toggleComment()"
-                                                ng-hide="isOpenCommentContent()">Bình luận</button>
+                                                ng-hide="isOpenCommentContent">Bình luận</button>
                                             <md-button ng-click="toggleRating(myRat)"
-                                                    ng-hide="isOpenRatingContent()"
-                                                    class="md-primary">
+                                                    ng-hide="isOpenRatingContent"
+                                                    class="btn btn-default">
                                                     Đánh giá
                                             </md-button>
                                         </div>
